[gd_scene load_steps=16 format=2]

[ext_resource path="res://interface/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://levels/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/ShadedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/AchievementsButton.svg" type="Texture" id=4]
[ext_resource path="res://interface/PlayButton.svg" type="Texture" id=5]
[ext_resource path="res://objects/Moon/moon.svg" type="Texture" id=6]
[ext_resource path="res://objects/Moon/gravity-field.svg" type="Texture" id=7]
[ext_resource path="res://screens/title_screen/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://interface/FadeRect.tscn" type="PackedScene" id=9]
[ext_resource path="res://screens/title_screen/title.png" type="Texture" id=10]
[ext_resource path="res://interface/SkinsButton.svg" type="Texture" id=11]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=12]
[ext_resource path="res://screens/GooglePlayServices.gd" type="Script" id=13]

[sub_resource type="ViewportTexture" id=1]
flags = 5
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id=2]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 8 )
game_scene = "res://Game.tscn"
achievements_scene = "res://screens/achievements_screen/AchievementsScreen.tscn"
skins_scene = "res://screens/skin_screen/SkinSelectScreen.tscn"

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Background" parent="Viewport" instance=ExtResource( 2 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -63.5
margin_right = -129.0
margin_bottom = 63.5
texture_normal = ExtResource( 5 )

[node name="AchievementsButton" parent="." instance=ExtResource( 3 )]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -63.5
margin_right = 263.0
margin_bottom = 63.5
texture_normal = ExtResource( 4 )

[node name="SkinsButton" parent="." instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -63.5
margin_right = 263.0
margin_bottom = 63.5
texture_normal = ExtResource( 11 )

[node name="Moon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 40.0
margin_right = 184.0
margin_bottom = 408.0
rect_rotation = 360.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 184, 184 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Moon"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -288.0
margin_right = 288.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 288, 288 )
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moon"]
autoplay = "Spin"
anims/Spin = SubResource( 2 )

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -296.0
margin_top = 31.0
margin_right = 311.0
margin_bottom = 352.0
texture = ExtResource( 10 )
expand = true

[node name="FadeRect" parent="." instance=ExtResource( 9 )]

[node name="GooglePlayServices" type="Node" parent="."]
script = ExtResource( 13 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 12 )
banner_id = "ca-app-pub-7966737774589643/5198354118"
interstitial_id = "ca-app-pub-7966737774589643/7848304856"
rewarded_id = "ca-app-pub-7966737774589643/1651110902"
is_personalized = false

[node name="Timer" type="Timer" parent="AdMob"]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="AchievementsButton" to="." method="_on_AchievementsButton_pressed"]
[connection signal="pressed" from="SkinsButton" to="." method="_on_SkinsButton_pressed"]
[connection signal="timeout" from="AdMob/Timer" to="." method="_on_AdMobTimer_timeout"]
